add more swagger
