# pkg/handler/item.go
@@ -7,6 +7,19 @@ import (
 	todolist_app "todolist-app"
 )
 
+// @Summary		Create todo items
+// @Security		ApiKeyAuth
+// @Tags			items
+// @Description	create todolist_app items
+// @ID				create-items
+// @Accept			json
+// @Produce		json
+// @Param			input	body		todolist_app.TodoItem	true	"list info"
+// @Success		200		{integer}	integer			1
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/api/items [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -36,6 +49,18 @@ func (h *Handler) createItem(c *gin.Context) {
 	})
 }
 
+// @Summary		Get All Items
+// @Security		ApiKeyAuth
+// @Tags			items
+// @Description	get all lists
+// @ID				get-all-items
+// @Accept			json
+// @Produce		json
+// @Success		200		{object}	getAllListsResponse
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/api/items [get]
 func (h *Handler) getAllItems(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -57,6 +82,18 @@ func (h *Handler) getAllItems(c *gin.Context) {
 	c.JSON(http.StatusOK, items)
 }
 
+// @Summary		Get Items By Id
+// @Security		ApiKeyAuth
+// @Tags			items
+// @Description	get item by id
+// @ID				get-item-by-id
+// @Accept			json
+// @Produce		json
+// @Success		200		{object}	todolist_app.ListItem
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/api/items/:id [get]
 func (h *Handler) getItemById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -79,6 +116,18 @@ func (h *Handler) getItemById(c *gin.Context) {
 
 }
 
+// @Summary		Update Item
+// @Security		ApiKeyAuth
+// @Tags			items
+// @Description		update by id
+// @ID				update-item-by-id
+// @Accept			json
+// @Produce		json
+// @Success		200		{object}	todolist_app.ListItem
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/api/items/:id [post]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -105,6 +154,18 @@ func (h *Handler) updateItem(c *gin.Context) {
 	c.JSON(http.StatusOK, statusResponse{"ok"})
 }
 
+// @Summary		Delete Items
+// @Security		ApiKeyAuth
+// @Tags			items
+// @Description		delete item by id
+// @ID				delete-item-by-id
+// @Accept			json
+// @Produce		json
+// @Success		200		{object}	todolist_app.ListItem
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/api/items/:id [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
